<resources>
    <string name="app_name">文芽</string>
    <string name="blank"></string>
    <string name="login">登录</string>
    <string name="hint_password">密码</string>
    <string name="hint_username">手机号/用户名</string>
    <string name="forget_password">忘记密码</string>
    <string name="my_published">我发布的</string>
    <string name="related_me">与我相关</string>
    <string name="book_name">书名</string>
    <string name="page_number">页码</string>
    <string name="collect_books">书架</string>
    <string name="notebooks">笔记</string>
    <string name="book_sheet">书单</string>
    <string name="book_shelf">书架</string>
    <string name="date_book">约书</string>
    <string name="more">更多</string>
    <string name="feedback_tip">欢迎您提出宝贵的意见或者建议，您的建议将是我们前进的动力~</string>
    <string name="hint_feedback_info">输入您的反馈信息</string>
    <string name="hint_contact">联系方式：邮箱/手机号</string>
    <string name="submit">提交</string>
    <string name="send_weibo">给我们发微博</string>
    <string name="send_weibo_info">\@文芽爱书</string>
    <string name="send_email">给我们发邮件</string>
    <string name="send_email_info">uvnya@foxmail.com</string>
    <string name="grade_app">给应用评分</string>
    <string name="user_agreement">用户协议</string>
    <string name="motto">生活不止苟且，还有书和远方！</string>
    <string name="version">版本 v1.0.1</string>
    <string name="user_info">个人信息</string>
    <string name="binding_account">账号绑定</string>
    <string name="change_binding_mobile">更换绑定手机号</string>
    <string name="binding_mobile">绑定手机号</string>
    <string name="have_binding_mobile">已绑定手机号：%1$s</string>
    <string name="incorrect_phone_num">非法手机号</string>


    <string name="alter_pwd">修改密码</string>
    <string name="clear_buffer">清除缓存</string>
    <string name="logout">登出账号</string>
    <string name="register_now">没有帐号？立即注册</string>
    <string name="tab_front_page">首页</string>
    <string name="tab_community">短评</string>
    <string name="tab_book_home">书房</string>
    <string name="tab_book_circle">书圈</string>
    <string name="tab_me">我</string>
    <string name="my_friends">我的好友</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_msg">我的消息</string>
    <string name="feedback">反馈</string>
    <string name="about">关于文芽</string>
    <string name="invitefriend">邀请好友</string>
    <string name="settings">设置</string>
    <string name="no_fill">未填写</string>
    <string name="no_binding">未绑定</string>
    <string name="face">头像</string>
    <string name="nick">昵称</string>
    <string name="culturebud_name">文芽号</string>
    <string name="sex">性别</string>
    <string name="email">邮箱</string>
    <string name="region">地区</string>
    <string name="profile">简介</string>
    <string name="publish_dynamic">发布动态</string>
    <string name="book_store">书库</string>
    <string name="book_sheet_store">书单库</string>
    <string name="book_community_comment_num">书说%1$d</string>
    <string name="fill_score">%1$.1f分</string>
    <string name="book_num">共%1$d本</string>
    <string name="comment_num">(%1$d条)</string>
    <string name="book_community_introduction">*相同书名和作者，不同版本的书构成一个书籍社区，每一条短评都会显示在对应的书籍社区里面，如果您想查看某个书籍社区的所有短评，可以在短评顶部搜索书名进入书籍社区。</string>
    <string name="please_select_book_community">+ 请选择一个书籍社区</string>
    <string name="hint_please_input_short_comment">写下这一刻的见解...(不超过180字)</string>
    <string name="send">发送</string>
    <string name="what_to_say">客官，说点什么吧...</string>
    <string name="note_update_time">更新时间：%1$s</string>
    <string name="note_desc">%1$s | %2$s | %3$s</string>
    <string name="note_permission">谁可以看：%1$s</string>
    <string name="hint_create_note_content">为 %1$s 做点笔记吧</string>
    <string name="scan_result_desc">共扫描%1$d本， 已识别%2$d本</string>
    <string name="book_select_count">加入藏书（已选择%1$d本）</string>
    <string name="book_cover">封面</string>
    <string name="book_name_orign">原作名</string>
    <string name="subtitle">副标题</string>
    <string name="isbn">ISBN</string>
    <string name="author">作者</string>
    <string name="translator">译者</string>
    <string name="price">定价</string>
    <string name="publisher">出版社</string>
    <string name="pub_date">出版日期</string>
    <string name="pages">页数</string>
    <string name="sheets_my_created">%1$s书单（%2$d）</string>
    <string name="sheets_my_favorite">%1$s收藏的书单（%2$d）</string>
    <string name="hint_book_sheet_desc">书单描述（不超过500字）</string>
    <string name="book_sheet_desc">书单介绍</string>
    <string name="hint_book_sheet_name">必填（不超过15字）</string>
    <string name="book_sheet_name">书单名</string>
    <string name="book_sheet_cover">书单封面</string>
    <string name="search_user_hint">昵称/手机号</string>
    <string name="reply">回复</string>
    <string name="publish">发布</string>
    <string name="clear_history">清除历史记录</string>
    <string name="account_setting">账户设置</string>
    <string name="change_pwd">修改密码</string>
    <string name="feedback_idea">意见反馈</string>
    <string name="friend_invalidate">朋友验证</string>
    <string name="me">我</string>
    <string name="add_book_friend">添加书友</string>
    <string name="regist">注册</string>
    <string name="retrieve_pwd">找回密码</string>
    <string name="base_info">基本信息</string>
    <string name="book_community">书籍社区</string>
    <string name="short_comment_detail">短评详情</string>
    <string name="input_bname_query_short_comment">输入书名查找社区短评</string>
    <string name="publish_short_comment">发布短评</string>
    <string name="book_home">书房</string>
    <string name="scan_result">扫描结果</string>
    <string name="select_none">全不选</string>
    <string name="create_book_sheet">新建书单</string>
    <string name="create_note">写笔记</string>
    <string name="dynamic_detail">动态详情</string>
    <string name="edit_book_sheet_info">编辑书单信息</string>
    <string name="edit_note">编辑笔记</string>
    <string name="edit_notebook_name">编辑笔记本名</string>
    <string name="commit_verify">提交审核</string>
    <string name="note">笔记</string>
    <string name="detail">详情</string>
    <string name="permission_public">公开</string>
    <string name="permission_friend">好友</string>
    <string name="permission_personal">私密</string>
    <string name="searched_books_tip">从您的书架共搜到%1$d本相关书籍</string>
    <string name="book_title_or_author">书名或作者</string>
    <string name="my_published_dynamic">我发布的动态</string>
    <string name="select_friend">选择好友</string>
    <string name="recommend_reason">推荐理由</string>
    <string name="my_book_info">我的书籍信息</string>
    <string name="book_comment">书评</string>
    <string name="rating">评分</string>
    <string name="personal">私密</string>
    <string name="read_place">阅读地点</string>
    <string name="read_time">阅读时间</string>
    <string name="read_status">阅读状态</string>
    <string name="obtain_type">获取方式</string>
    <string name="obtain_place">获取地点</string>
    <string name="obtain_time">获取时间</string>
    <string name="book_type">书籍类型</string>
    <string name="other">其他</string>
    <string name="tag">标签</string>
    <string name="write_some_idea">写点见解吧...</string>
    <string name="set_tags">设置标签</string>
    <string name="total_pages">总页码</string>
    <string name="my_created">我创建的</string>
    <string name="txt_custom_categories_count">自定义分类（%1$d）</string>
    <string name="find_none_wanted">没有找到您想要的书籍，<a color='red'>尝试亲手创建吧</a></string>
    <string name="mycreatedbook_notice">您手动录入的新书通过审核后将会自动添加到书架</string>
    <string name="autograph_hint">暂无简介</string>
    <string name="concern_title">关注</string>
    <string name="beconcerned_title">被关注</string>
    <string name="add_concern_title">加关注</string>
    <string name="concerned_title">已关注</string>
    <string name="concerned_each_title">互相关注</string>
    <string name="cancel_concern_notice">确定不再关注此人？</string>
    <string name="other_concern_pagetitle">他关注的</string>
    <string name="other_concerned_pagetitle">关注他的</string>
    <string name="my_concern_pagetitle">我关注的</string>
    <string name="my_concerned_pagetitle">关注我的</string>

    <string name="txt_mobile">手机号</string>
    <string name="txt_wechat">微信</string>
    <string name="txt_weibo">微博</string>

    <string name="wy_account_rules">
         ·文芽号可作为用户名进行登录，只能设置一次\n·6-20个字符，只能使用英文字母a～z (区分大小写)、数字0～9、-、组成，且不能以\"-\"和\"\"开头和结尾\n·如果之前没有设置登录密码，设置完文芽号后必须设置登录密码，否则无法用文芽号进行登录
    </string>
    <string name="wy_account_error_message">文芽号只能由英文字母a～z (区分大小写)、数字0～9、下划线、横线组成，且不能以\"-\"和\"_\"开头和结尾</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--藏书编辑底部菜单-->
    <string name="menu_del_book">删除</string>
    <string name="menu_set_status">阅读状态</string>
    <string name="menu_set_category">自定义分类</string>

    <!--common operate-->
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>

    <!--录入藏书状态-->
    <string name="added">已添加</string>

    <!--状态视图-->
    <string name="empty_view_hint">暂无数据</string>
    <string name="error_view_hint">数据请求错误，请稍后再试</string>
    <string name="no_network_view_hint">网络请求失败，请检查您的网络</string>
    <string name="reloaddata">重新加载</string>

    <!--分享-->
    <string name="invitefriend_title">文芽"</string>
    <string name="invitefriend_content">拥有自己的书房，让阅读更高效！</string>
</resources>
