<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_del"
        android:enabled="true"
        android:icon="@mipmap/ic_menu_del_book"
        android:title="@string/menu_del_book"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_read_status"
        android:enabled="true"
        android:icon="@mipmap/ic_menu_read_status"
        android:title="@string/menu_set_status"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_custom"
        android:enabled="true"
        android:icon="@mipmap/ic_menu_category"
        android:title="@string/menu_set_category"
        app:showAsAction="ifRoom"/>

</menu>