<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.culturebud.widget.SettingItemView
        android:id="@+id/siv_user_info"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:background="@drawable/setting_item_first_bg_selector"
        android:clickable="true"
        android:onClick="onClick"
        app:has_icon="false"
        app:name="@string/user_info" />

    <com.culturebud.widget.SettingItemView
        android:id="@+id/siv_binding"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/setting_item_center_bg_selector"
        android:clickable="true"
        android:onClick="onClick"
        app:has_icon="false"
        app:name="@string/binding_account" />

    <com.culturebud.widget.SettingItemView
        android:id="@+id/siv_alter_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:background="@drawable/setting_item_last_bg_selector"
        android:clickable="true"
        android:onClick="onClick"
        app:has_icon="false"
        app:name="@string/alter_pwd" />

    <com.culturebud.widget.SettingItemView
        android:id="@+id/siv_clear_buffer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/setting_item_bg_selector"
        android:clickable="true"
        android:onClick="onClick"
        app:has_icon="false"
        app:name="@string/clear_buffer" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="25dp"
        android:background="@drawable/login_btn_selector"
        android:onClick="onClick"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>