<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/feedback_tip"
        android:textColor="@color/front_hot_font"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_feedback_content"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="15dp"
        android:background="@drawable/round_border_bg"
        android:gravity="left|top"
        android:hint="@string/hint_feedback_info"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_contact"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="15dp"
        android:background="@drawable/round_border_bg"
        android:gravity="left|center_vertical"
        android:hint="@string/hint_contact"
        android:inputType="text"
        android:maxLines="1"
        android:padding="5dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/login_btn_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>