<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_add_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="onClick"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/book_sheet_cover"
            android:textColor="@color/title_font_default"
            android:textSize="14sp" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sdv_bs_cover"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginRight="15dp"
            fresco:actualImageScaleType="fitXY"
            fresco:placeholderImage="@mipmap/pic_add"
            fresco:placeholderImageScaleType="fitXY" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line_bg"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/book_sheet_name"
            android:textColor="@color/title_font_default"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_sheet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:background="@android:color/white"
            android:hint="@string/hint_book_sheet_name"
            android:maxLength="15"
            android:padding="5dp"
            android:textColor="@color/title_font_default"
            android:textColorHint="@color/font_more"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/book_sheet_desc"
        android:textColor="@color/title_font_default"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_sheet_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line_bg"
        android:gravity="left|top"
        android:hint="@string/hint_book_sheet_desc"
        android:minLines="6"
        android:padding="15dp"
        android:textColor="@color/title_font_default"
        android:textColorHint="@color/font_more"
        android:textSize="14sp" />

</LinearLayout>